third_party/move/move-compiler-v2/tests/more-v1/expansion/duplicate_module.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/duplicate_module.move:2:19
  │
1 │ module 0x8675309::M {}
  │                   - Module previously defined here, with '0x8675309::M'
2 │ module 0x8675309::M {}
  │                   ^ Duplicate definition for module '0x8675309::M'
